tests/endpoint_macros_compile_fail/invalid_path_no_colon.stderr
error: path `/no-colon` has 0 `:param` segment(s) but the struct has 1 field(s)
 --> $WORKSPACE/tests/endpoint_macros_compile_fail/invalid_path_no_colon.rs
  |
  | #[endpoint(path = "/no-colon")]
  |                   ^^^^^^^^^^^
