tests/endpoint_macros_compile_fail/invalid_path_no_colon.rs
use better_fetch::EndpointParamsDerive;

#[derive(Default, EndpointParamsDerive)]
#[endpoint(path = "/no-colon")]
struct BadPathParams {
    id: u64,
}

fn main() {}
